k8s-rewrite/charts/web-app-stack/lucinda-art-gallery/service.yaml
# Lucinda Art Gallery Service
apiVersion: v1
kind: Service
metadata:
  name: lucinda-art-gallery
  namespace: website-stack
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
  selector:
    app: lucinda-art-gallery
